# fashionAgent

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/seed/: articles.json  customers.json  inventory.json  suppliers.json  transactions.json
docs/: API.md  DATA_STRATEGY.md  PROJECT_PLAN.md
scripts/: seed_memory.py
src/fashion_agent/: __init__.py
src/fashion_agent/agents/: base.py  data_agent.py  design_agent.py  marketing_agent.py  supply_chain_agent.py  visual_agent.py
src/fashion_agent/core/: config.py  data_loader.py  exceptions.py  llm.py  logging.py  models.py
src/fashion_agent/evaluation/: ragas_eval.py  runner.py  scorer.py
src/fashion_agent/gateway/: app.py  dependencies.py
src/fashion_agent/gateway/routes/: data.py  (+5 more)
src/fashion_agent/memory/: entity.py  long_term.py  manager.py  mid_term.py  reflection.py  short_term.py
src/fashion_agent/orchestrator/: master_agent.py  state.py
src/fashion_agent/skills/: base.py  loader.py  registry.py
src/fashion_agent/tracing/: langsmith.py
tests/: conftest.py
tests/evaluation/: test_e2e_eval.py  test_scorer.py
tests/integration/: test_api.py  test_memory_api.py  test_orchestrator.py  test_sop_workflow.py
tests/unit/test_agents/: test_design_agent.py  test_marketing_agent.py  test_visual_agent.py
tests/unit/test_memory/: test_entity.py  test_long_term.py  test_mid_term.py  test_reflection.py  test_short_term.py
tests/unit/test_skills/: test_l1_skills.py  test_l2_skills.py  test_new_l1_skills.py  test_registry.py
(+15 files in other folders)
