[project]
name = "fashion-agent"
version = "0.1.0"
description = "Fashion e-commerce multi-agent system powered by LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.3.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis[hiredis]>=5.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "faker>=30.0",
    "pandas>=2.0",
    # pymilvus 明示排除多個有問題的 grpcio 版本；1.73.x 在 Windows + Docker 上常導致 gRPC 握手超時
    "grpcio>=1.64.2,<1.68.0",
    "pymilvus>=2.5.4,<2.6",
    "neo4j>=5.0",
]

[project.optional-dependencies]
full = [
    "ragas>=0.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fashion_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
